# aoc_2024

./: Cargo.toml  README.md
.github/workflows/: codspeed.yml
benches/: bench_bitset.rs  bench_day10.rs  bench_day11.rs  bench_day4_load_align.rs  bench_day5.rs  bench_day6.rs  bench_day7.rs  bench_day8.rs  bench_day9.rs  bench_days.rs
src/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  day_1.rs  day_2.rs  day_3.rs  lib.rs  stack_vec.rs
src/bitset/: mod.rs  packed.rs  primitives.rs  simd.rs  sparse.rs
