[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Pocock <turingatemyhamster@gmail.com>"]

[profile.release]
opt-level = 3
debug = false
debug_assertions = false
overflow-checks = false


[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.11.1"
nom = "7.1.3"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat", default-features = false }
indoc = "2.0.5"
paste = "1.0.15"
rand = "0.8.5"

[[bench]]
name = "bench_days"
harness = false

[[bench]]
name = "bench_day4_load_align"
harness = false

[[bench]]
name = "bench_day5"
harness = false
